--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<p>Se precisar quebrar uma linha é so usar a tag <xmp> <br> </xmp> </p>
 		<p>quebra de linha <br> usando a tag br</p>
 		<hr>
+                <img src="logo.jpg" alt="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTRyfRtDiEiq-kf3HcyDNfJSj_t29hkpAnXxg&usqp=CAU" width=60 height=40>
 		<h2>Simbolos Especiais</h2>
 		<p>Vamos adiconar alguns simbolos especiais:<br>&reg; <br>&copy; <br>&trade; <br>&euro; <br>&dollar;</p>
 		
