--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<p>Se precisar quebrar uma linha é so usar a tag <xmp> <br> </xmp> </p>
 		<p>quebra de linha <br> usando a tag br</p>
 		<hr>
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTRyfRtDiEiq-kf3HcyDNfJSj_t29hkpAnXxg&usqp=CAU" alt="Neymito" width=80 height=100>
+                <img src="images.png" alt="Neymito" width=80 height=100>
 		<h2>Simbolos Especiais</h2>
 		<p>Vamos adiconar alguns simbolos especiais:<br>&reg; <br>&copy; <br>&trade; <br>&euro; <br>&dollar;</p>
 		
