--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<img src=”images.png” alt=”neymito” width=20 height=40>
+<img src=”images.png” alt=”neymito” width="19" height="20">
 
 </body>
 </html>
